--- a/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
@@ -51,10 +51,10 @@
 														<h5>{{matchingJob?.jobs?.title}} <small></small></h5>
 													</a>
 													<h6 class="mb-0 text-capitalize">
-														{{matchingJob?.jobs?.city ? matchingJob?.jobs?.city : ''}}
-														{{matchingJob?.jobs?.state ? ', ' + matchingJob?.jobs?.state : ''}}
+														{{matchingJob?.jobs?.city ? matchingJob?.jobs?.city+', '  : ''}}
+														{{matchingJob?.jobs?.state ?  matchingJob?.jobs?.state+', '  : ''}}
 														<span class="text-uppercase">
-															{{matchingJob?.jobs?.country ? ', ' + matchingJob?.jobs?.country : ''}}
+															{{matchingJob?.jobs?.country ? matchingJob?.jobs?.country : ''}}
 														</span>
 													</h6>
 												</div>
@@ -92,10 +92,10 @@
 														<h5>{{matchingJobNew?.jobs?.title}} <small></small></h5>
 													</a>
 													<h6 class="mb-0 text-capitalize">
-														{{matchingJobNew?.jobs?.city ? matchingJobNew?.jobs?.city : ''}}
-														{{matchingJobNew?.jobs?.state ? ', ' + matchingJobNew?.jobs?.state : ''}}
+														{{matchingJobNew?.jobs?.city ? matchingJobNew?.jobs?.city+', '  : ''}}
+														{{matchingJobNew?.jobs?.state ?  matchingJobNew?.jobs?.state+', '  : ''}}
 														<span class="text-uppercase">
-														  {{matchingJobNew?.jobs?.country ? ', ' + matchingJobNew?.jobs?.country : ''}}
+														  {{matchingJobNew?.jobs?.country ? matchingJobNew?.jobs?.country : ''}}
 														</span>
 													</h6>
 												</div>
