--- a/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
+++ b/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
@@ -7,6 +7,8 @@
             <app-contact-card
             [userInfo]="userInfo"
             [isEdit]="true"
+			[isUploadShow]="true"
+			[isUploadShowResume]="true"
             [isContactIcon]="false"
             [isResume]="true"
             >
