--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -215,16 +215,16 @@
                     <!-- <img src="assets/images/user-img.jpg"> -->
                     <div class="media-body">
                       <h6 class="text-capitalize">
-                        {{item?.city ? item?.city : ''}}
-                        {{item?.state ? ', ' + item?.state : ''}}
+                        {{item?.city ? item?.city +', ' : ''}}
+                        {{item?.state ?  item?.state +', ' : ''}}
                         <span>
-                          {{item?.country ? ', ' + item?.country : ''}}
+                          {{item?.country ?  item?.country : ''}}
                         </span>
                       </h6>
                       <h6>{{item?.experience ? 'Total Years Exp: ' + item?.experience : ''}}
                         <span *ngIf="item?.sap_experience">, {{item?.sap_experience ? 'SAP Exp: ' + item?.sap_experience : ''}}</span>
                       </h6>
-                      <h6 *ngIf="item?.job_type">{{item?.job_type ? sharedService.onGetJobType(item?.job_type) : ''}}</h6>
+                      <h6 *ngIf="item?.job_type">{{item?.job_type ? checkJobType(item?.job_type) : ''}}</h6>
                       <h6 *ngIf="item?.availability || item?.availability == 0">
                        Availability: {{(item?.availability || item?.availability == 0) ? (item?.availability == 0 ? 'Immediate' : item?.availability + ' Days') : '--'}}
                       </h6>
